--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
+    "build": "tsc",
     "test": "jest"
   },
   "author": "Radu Lucut",
   "license": "MIT",
   "devDependencies": {
-    "jest": "^26.6.3"
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-typescript": "^7.14.5",
+    "@types/jest": "^26.0.23",
+    "babel-jest": "^27.0.5",
+    "jest": "^27.0.5",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.4"
   }
 }
