--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
+    "serve": "tsc && node dist/index.js",
     "test": "jest"
   },
   "author": "Radu Lucut",
