--- a/package.json
+++ b/package.json
@@ -5,18 +5,12 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "serve": "tsc && node dist/index.js",
-    "test": "jest"
+    "example": "tsc && node dist/index.js -f example.htnoml"
   },
   "author": "Radu Lucut",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.14.6",
-    "@babel/preset-env": "^7.14.7",
-    "@babel/preset-typescript": "^7.14.5",
-    "@types/jest": "^26.0.23",
-    "babel-jest": "^27.0.5",
-    "jest": "^27.0.5",
+    "@types/node": "^16.11.4",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.4"
   }
